--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,5 +1,6 @@
+
 {{!-- <nav class="navbar navbar-expand-lg shadow-5-strong sticky-top"> --}}
-  <nav class="navbar navbar-expand-sm fixed-top navbar-light">
+<nav class="navbar navbar-expand-sm fixed-top navbar-light">
   <a class="navbar-brand text-white" href="#">PoST</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,14 +9,20 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link text-white" href="/index">Home <span class="sr-only">(current)</span></a>
       </li>
     </ul>
      <form class="form-inline my-2 my-lg-0">
-      <a class="mx-5 text-white" href="login">Login</a>
-      <a class="btn btn-primary my-2 my-sm-0" href="register" type="submit">Sign Up for free</a>
+      
+      {{#ifEquals btn2 'Logout'}}
+      <a class="btn btn-primary my-2 my-sm-0" href={{btn2}} type="submit">{{btn2}}</a>
+      {{else}}
+      <a class="mx-5 text-white" href="login"> {{btn1}}</a>
+      <a class="btn btn-primary my-2 my-sm-0" href="register" type="submit">{{btn2}}</a>
+      {{/ifEquals}}
     </form>
-    
+  
+
   </div>
 </nav>
 
