--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,54 +2,78 @@
 <html lang="en">
 
 {{>header}}
+<style>
+  .card-deck {
+    flex-flow: column;
+  }
+</style>
 
 <body>
 
-        <img class="wrapper" src="img/4.jpg" alt="">
-  
-    {{>navbar}}
-    
-    <div class="container my-4">
-        <h1 style="text-align: center;">Latest Post</h1>
+  <img class="wrapper" src="img/4.jpg" alt="">
 
-       <div class="card-deck ">
-  <div class="card ">
-    <img src="img/1.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <button class="btn btn-primary">Read</button>
+  {{>navbar}}
+
+  <div class="container my-4">
+
+    <div class="container d-flex justify-content-center align-items-center">
+      <a href="createPost"><i class="fa fa-plus-circle" style="font-size:48px;color:red"></i></a>
     </div>
+
+    
+    {{#if postDeleted}}
+    <div class="alert alert-danger">{{postDeleted}}</div>
+    {{/if}}
+    {{#checklength posts}}
+    <h1 style="text-align: center;">Create Post</h1>
+    <h1>There is no post! </h1>
+    {{else}}
+    <h1 style="text-align: center;">Latest Post</h1>
+     <div class="dropdown d-flex" style="justify-content: right;">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        Sort By
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="/latestPost">New Post</a>
+        <a class="dropdown-item" href="/oldPost">Old Post</a>
+      </div>
+    </div>
+    <div class="card-deck ">
+      <div class="row">
+        {{#each posts }}
+        <div class="col-sm-4 mt-4">
+          <div class="card ">
+            <img src="img/{{this.image}}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-uppercase">{{ this.title }}</h5>
+
+              <p class="card-text">{{{dotdotdot this.description this._id}}}</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <p class="card-text ml-3">Posted by:{{ this.username }}</p>
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+        {{/each}}
+      </div>
+    </div>
+    {{/checklength}}
+   
   </div>
-  <div class="card">
-    <img src="img/2.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <button class="btn btn-primary">Read</button>
-    </div>
-  </div>
-  <div class="card">
-    <img src="img/3.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <button class="btn btn-primary">Read</button>
-    </div>
-  </div>
-</div>
-    </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
